# ucc

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  default.nix  flake.nix  package.nix  ucc.install  ucc.spec
debian/: changelog  control  not-installed  rules  ucc-gui.install  ucc-tray.install  ucc.install  ucc.lintian-overrides
include/: CommonTypes.hpp  Utils.hpp  version.h.in
libucc-dbus/: CMakeLists.txt  GuiLauncher.hpp  UccdClient.cpp  UccdClient.hpp
nix/: nixos-module.nix
nvidia_findings/: README.md  clockboost_scan  clockboost_scan.c  deep_fields  deep_fields.c  deep_fields_output.txt  deep_nvapi  deep_nvapi.c  deep_nvapi_output.txt  deep_nvml_output.txt  deep_nvml_probe  deep_nvml_probe.c  final_detail  final_detail.c  nvapi-symbols.txt  nvidia_undocumented_api_findings.md  nvml-symbols.txt  nvml_detail  nvml_detail.c  nvml_detail_output.txt  nvml_fine_scan  nvml_fine_scan.c  nvml_scan2  nvml_scan2.c  nvml_scan2_output.txt  probe_nvapi  probe_nvapi.c  probe_nvapi_data  probe_nvapi_data.c
tests/: CMakeLists.txt  test_fan_profile.cpp  test_metrics_history.cpp  test_profile_manager.cpp  test_settings_manager.cpp  test_state_utils.cpp
ucc-cli/: CMakeLists.txt  main.cpp  ucc-cli.1  ucc-cli.bash
ucc-gnome/: extension.js  metadata.json  stylesheet.css  uccdClient.js
ucc-gui/: CMakeLists.txt  ucc-gui.desktop
ucc-gui/inc/: DashboardTab.hpp  FanControlTab.hpp  FanCurveEditorWidget.hpp  GpuProfileTab.hpp  KeyboardVisualizerWidget.hpp  LCTWaterCoolerController.hpp  MainWindow.hpp  MonitorTab.hpp  ProfileManager.hpp  PumpCurveEditorWidget.hpp  SystemMonitor.hpp
ucc-gui/qml/: main.qml
ucc-gui/src/: AssignKeyZones.cpp  DashboardTab.cpp  DetectLayout.cpp  FanControlTab.cpp  FanCurveEditorWidget.cpp  GpuProfileTab.cpp  KeyboardTab.cpp  KeyboardVisualizerWidget.cpp  LCTWaterCoolerController.cpp  MainWindow.cpp  MonitorTab.cpp  ProfileManager.cpp  PumpCurveEditorWidget.cpp  SystemMonitor.cpp  main.cpp
ucc-tray/: CMakeLists.txt  TrayBackend.cpp  TrayBackend.hpp  main.cpp  tray-resources.qrc  ucc-tray.desktop
ucc-tray/applet/: CMakeLists.txt  DashboardTab.qml  HardwareTab.qml  KeyboardTab.qml  PowerProfileTab.qml  WaterCoolerTab.qml  main.qml  metadata.json
ucc-tray/qml/: DashboardTab.qml  HardwareTab.qml  KeyboardTab.qml  PowerProfileTab.qml  TrayPopup.qml  WaterCoolerTab.qml
ucc-tray/src/: CMakeLists.txt  TrayBackend.cpp  TrayBackend.hpp  plugin.cpp  plugin.h
ucc-widgets/profile-switcher/package/contents/ui/: main.qml
ucc-widgets/system-monitor/package/contents/ui/: SystemMetricsProvider.qml
uccd/: CMakeLists.txt  com.uniwill.uccd.conf  com.uniwill.uccd.policy  com.uniwill.uccd.service  uccd-sleep.service  uccd.service
uccd/inc/: AutosaveManager.hpp  CpuController.hpp  KeyboardBacklightController.hpp  MetricsHistoryStore.hpp  NvmlWrapper.hpp  PolkitAuthority.hpp  PowerSupplyController.hpp  ProfileManager.hpp  SettingsManager.hpp  StateUtils.hpp  SystemInfo.hpp  TccSettings.hpp  UccDBusService.hpp  Utils.hpp
uccd/inc/profiles/: DefaultProfiles.hpp  FanProfile.hpp  UccProfile.hpp
uccd/inc/workers/: CpuWorker.hpp  DaemonWorker.hpp  DisplayWorker.hpp  FanControlWorker.hpp  HardwareMonitorWorker.hpp  KeyboardBacklightListener.hpp  LCTWaterCoolerWorker.hpp  NvidiaOCWorker.hpp  ProfileSettingsWorker.hpp
uccd/src/: NvmlWrapper.cpp  SystemInfo.cpp  UccDBusService.cpp  uccd.cpp
uccd/src/profiles/: DefaultProfiles.cpp  FanProfiles.cpp  UccProfile.cpp
uccd/src/workers/: DisplayWorker.cpp  HardwareMonitorWorker.cpp  LCTWaterCoolerWorker.cpp  NvidiaOCWorker.cpp  ProfileSettingsWorker.cpp
